--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -9,8 +9,8 @@
 }
 
 .experience {
-  --color: rgba(30, 30, 30);
-  --bgColor: rgba(245, 245, 245);
+  --color: rgb(255, 255, 255);
+  --bgColor: rgb(0, 0, 0);
   min-height: 100vh;
   display: grid;
   align-content: center;
@@ -32,7 +32,7 @@
 .experience-bg-overlay{
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
   position: absolute;
   top: 0;
   left: 0;
@@ -41,6 +41,15 @@
 
 .company-logo{
   max-width: 100%;
+}
+
+.school-logo{
+  max-width: 80%;
+}
+
+.descr{
+  display: flex;
+  justify-content: center;
 }
 
 h1 {
