--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -8,6 +8,13 @@
   box-sizing: border-box;
 }
 
+.experience-container{
+  flex-direction: row;  
+  flex-flow: wrap; 
+  position: relative;
+  z-index: 5;
+}
+
 .experience {
   --color: rgb(255, 255, 255);
   --bgColor: rgb(0, 0, 0);
@@ -18,8 +25,13 @@
   color: var(--color);
 }
 
+.experience-header{
+  padding-top: 40px;
+  padding-bottom: 60px;
+}
+
 .experiece_bg{
-    background-image: url(../img/jet.jpg); 
+    background-image: url(../img/roadmap.jpg); 
     position: relative;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -32,7 +44,7 @@
 .experience-bg-overlay{
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
   left: 0;
@@ -47,7 +59,7 @@
   max-width: 80%;
 }
 
-.descr{
+.descr, .title{
   display: flex;
   justify-content: center;
 }
