--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -96,6 +96,19 @@ h3{
     width: 500px;
 }
 
+.grad-icon{
+    max-width: 50px;
+}
+
+.swe-icon{
+    max-width: 40px;
+}
+
+.red_text{
+    color: #E61231;
+    padding-left: 10px;
+}
+
 .badges_container{
     display: flex;
     margin-top: 30px;
