--- a/src/Components/Service.css
+++ b/src/Components/Service.css
@@ -1,74 +1,74 @@
-h1.heading{
-    font-size: 60px;
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 700;
-    margin-bottom: 10px;
+h1.heading {
+  font-size: 60px;
+  text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 700;
+  margin-bottom: 10px;
 }
 
-.projects_bg{
-    background-image: url(../img/projects_bg.jpg); 
-    position: relative;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
+.projects_bg {
+  background-image: url(../img/projects_bg.jpg);
+  position: relative;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
 
-p.heading.p__color{
-    margin-bottom: 0;
-    text-align: center;
-    line-height: 1.2;
+p.heading.p__color {
+  margin-bottom: 0;
+  text-align: center;
+  line-height: 1.2;
 }
 
-.service__box{
-    border-radius: 10px;
-    background-color: rgb(47, 8, 8);
-    width: 100%;
-    padding: 55px;
-    transition: 0.4s ease;
+.service__box {
+  border-radius: 10px;
+  background-color: rgb(47, 8, 8);
+  width: 100%;
+  padding: 55px;
+  transition: 0.4s ease;
 }
 
-.service__box:hover{
-    transform: translateY(5px);
-    /* background-image: linear-gradient(90deg, #222222, rgb(249, 99, 5), #006899); */
+.service__box:hover {
+  transform: translateY(5px);
+  /* background-image: linear-gradient(90deg, #222222, rgb(249, 99, 5), #006899); */
 }
 
-.icon{
-    width: 50%;
-    object-fit: contain;
+.icon {
+  width: 50%;
+  object-fit: contain;
 }
 
-h1.service__text{
-    font-size: 30px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding: 10px 0px;
+h1.service__text {
+  font-size: 30px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  padding: 10px 0px;
 }
 
-.fcolor{
-    color: white;
+.fcolor {
+  color: white;
 }
 
-.project__Button{
-    border: 2px solid;
-    border-color: white;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    display: flex;
-    font-size: 16px;
-    font-weight: bold;
-    font-family:Georgia, 'Times New Roman', Times, serif ;
-    background-color: #CF4420;
-    justify-content: center;
-    border-radius: 4px;
+.project__Button {
+  border: 2px solid;
+  border-color: white;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  background-color: #cf4420;
+  justify-content: center;
+  border-radius: 4px;
 }
 
 /*Responsive*/
-@media only screen and (max-width: 1024px){
-    .service__box{
-        padding: 48px;
-    }
+@media only screen and (max-width: 1024px) {
+  .service__box {
+    padding: 48px;
+  }
 }
