--- a/src/Components/PhotoGallery.css
+++ b/src/Components/PhotoGallery.css
@@ -4,6 +4,8 @@
 
 .gallery__space {
   padding-top: 120px;
+  padding-left: 10px;
+  padding-right: 10px;
   width: 100%;
   height: 100%;
   z-index: 3;
