--- a/src/Components/Artwork.css
+++ b/src/Components/Artwork.css
@@ -1,81 +1,183 @@
-.grid-wrap {
-  position: relative;
-  margin: 0;
-  padding: 10px;
-}
-
-.grid-wrap ul {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, auto));
-  grid-auto-flow: dense;
-  grid-gap: 2px;
-  justify-content: center;
-  margin: 0 auto;
-  padding: 0;
-}
-
-.body__art {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.grid-wrap ul li {
-  position: relative;
-  padding: 10px;
-}
-
-.grid-wrap ul li:nth-child(1) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-.grid-wrap ul li:nth-child(2) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-.grid-wrap ul li:nth-child(3) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-
-.grid-wrap ul li:nth-child(4) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-
-.grid-wrap ul li:nth-child(5) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-
-.grid-wrap ul li:nth-child(6) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-.grid-wrap ul li:nth-child(7) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-.grid-wrap ul li:nth-child(8) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-.grid-wrap ul li:nth-child(9) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-.grid-wrap ul li:nth-child(10) {
-  grid-row: span 2;
-  grid-column: span 4;
-}
-
-.grid-wrap ul img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.grid-wrap ul li:hover {
-  filter: opacity(0.8);
-  transition: 0.2s;
-  cursor: pointer;
-}
+.my-photo-gallery {
+    background-color: #eee;
+  }
+  
+  .gallery__space {
+    padding-top: 120px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+  }
+  
+  .hello {
+    opacity: 1 !important;
+  }
+  
+  .expanded {
+    transform: scale(0.5);
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+  
+  .full {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+  
+  .full .content {
+    background-color: rgba(0, 0, 0, 0.75) !important;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .full .content img {
+    max-width: 70%;
+    max-height: 70%;
+  }
+  
+  .byebye {
+    opacity: 0;
+  }
+  
+  .byebye:hover {
+    transform: scale(0.2) !important;
+  }
+  
+  .gallery {
+    display: grid;
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-auto-rows: 8px;
+  }
+  
+  .gallery img {
+    max-width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 0 16px #333;
+    transition: all 1.5s ease;
+  }
+  
+  .gallery img:hover {
+    box-shadow: 0 0 32px #333;
+  }
+  
+  .gallery .content {
+    padding: 4px;
+  }
+  
+  .gallery .gallery-item {
+    transition: grid-row-start 300ms linear;
+    transition: transform 300ms ease;
+    transition: all 0.5s ease;
+    cursor: pointer;
+  }
+  
+  .gallery .gallery-item:hover {
+    transform: scale(1.025);
+  }
+  
+  @media (max-width: 600px) {
+    .gallery {
+      grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
+    }
+  }
+  
+  @media (max-width: 400px) {
+    .gallery {
+      grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+    }
+  }
+  
+  @-moz-keyframes zoomin {
+    0% {
+      max-width: 50%;
+      transform: rotate(-30deg);
+      filter: blur(4px);
+    }
+    30% {
+      filter: blur(4px);
+      transform: rotate(-80deg);
+    }
+    70% {
+      max-width: 50%;
+      transform: rotate(45deg);
+    }
+    100% {
+      max-width: 100%;
+      transform: rotate(0deg);
+    }
+  }
+  
+  @-webkit-keyframes zoomin {
+    0% {
+      max-width: 50%;
+      transform: rotate(-30deg);
+      filter: blur(4px);
+    }
+    30% {
+      filter: blur(4px);
+      transform: rotate(-80deg);
+    }
+    70% {
+      max-width: 50%;
+      transform: rotate(45deg);
+    }
+    100% {
+      max-width: 100%;
+      transform: rotate(0deg);
+    }
+  }
+  
+  @-o-keyframes zoomin {
+    0% {
+      max-width: 50%;
+      transform: rotate(-30deg);
+      filter: blur(4px);
+    }
+    30% {
+      filter: blur(4px);
+      transform: rotate(-80deg);
+    }
+    70% {
+      max-width: 50%;
+      transform: rotate(45deg);
+    }
+    100% {
+      max-width: 100%;
+      transform: rotate(0deg);
+    }
+  }
+  
+  @keyframes zoomin {
+    0% {
+      max-width: 50%;
+      transform: rotate(-30deg);
+      filter: blur(4px);
+    }
+    30% {
+      filter: blur(4px);
+      transform: rotate(-80deg);
+    }
+    70% {
+      max-width: 50%;
+      transform: rotate(45deg);
+    }
+    100% {
+      max-width: 100%;
+      transform: rotate(0deg);
+    }
+  }
+  
