--- a/src/Components/PhotoGallery.css
+++ b/src/Components/PhotoGallery.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap');
+
+.quotes-div{
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.quote{
+  font-size: 50pt;
+  font-family: 'Tangerine', cursive;  
+}
+
 .my-photo-gallery {
   background-color: #eee;
 }
