--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -1,6 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap");
 
+/* Rest of the CSS styles */
+
+.code-snippet-container {
+  position: fixed;
+  top: 50%;
+  right: 10%;
+  transform: translate(50%, -50%);
+}
+
+.code-snippet {
+  
+  padding: 20px;
+  border-radius: 8px;
+  font-family: "Fira Code", monospace;
+  font-size: 14px !important;
+  color: #d4d4d4;
+}
+.code-snippet span{
+  font-size: 20px !important;
+}
+
+.keyword {
+  color: #dcdcaa;
+}
+
+.function {
+  color: #ce9178;
+}
+.function span {
+  font-size: 20px !important;
+}
+
 .quotes-div {
   margin-bottom: 20px;
   display: flex;
