Fixed <ul> conflict between header and experience

--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -132,7 +132,7 @@ h1 {
   text-align: center;
 }
 
-ul {
+.experience-ul {
   --col-gap: 2rem;
   --row-gap: 2rem;
   --line-w: 0.25rem;
@@ -146,7 +146,7 @@ ul {
 }
 
 /* line */
-ul::before {
+.experience-ul::before {
   content: "";
   grid-column: 1;
   grid-row: 1 / span 20;
@@ -157,12 +157,12 @@ ul::before {
 /* columns*/
 
 /* row gaps */
-.job-timeline ul li:not(:last-child) {
+.experience-ul li:not(:last-child) {
   margin-bottom: var(--row-gap);
 }
 
 /* card */
-ul li {
+.experience-ul li {
   grid-column: 2;
   --inlineP: 1.5rem;
   margin-inline: var(--inlineP);
@@ -172,7 +172,7 @@ ul li {
 }
 
 /* date */
-ul li .date {
+.experience-ul li .date {
   --dateH: 3rem;
   height: var(--dateH);
   margin-inline: calc(var(--inlineP) * -1);
@@ -192,7 +192,7 @@ ul li .date {
 }
 
 /* date flap */
-ul li .date::before {
+.experience-ul li .date::before {
   content: "";
   width: var(--inlineP);
   aspect-ratio: 1;
@@ -211,7 +211,7 @@ ul li .date::before {
 }
 
 /* circle */
-ul li .date::after {
+.experience-ul li .date::after {
   content: "";
   position: absolute;
   width: 2rem;
@@ -225,26 +225,26 @@ ul li .date::after {
 }
 
 /* title descr */
-ul li .title,
-ul li .descr {
+.experience-ul li .title,
+.experience-ul li .descr {
   background: var(--bgColor);
   position: relative;
   padding-inline: 1.5rem;
 }
-ul li .title {
+.experience-ul li .title {
   overflow: hidden;
   padding-block-start: 1.5rem;
   padding-block-end: 1rem;
   font-weight: 500;
 }
-ul li .descr {
+.experience-ul li .descr {
   padding-block-end: 1.5rem;
   font-weight: 300;
 }
 
 /* shadows */
-ul li .title::before,
-ul li .descr::before {
+.experience-ul li .title::before,
+.experience-ul li .descr::before {
   content: "";
   position: absolute;
   width: 90%;
@@ -255,44 +255,44 @@ ul li .descr::before {
   filter: blur(4px);
   transform: translate(-50%, 50%);
 }
-ul li .title::before {
+.experience-ul li .title::before {
   bottom: calc(100% + 0.125rem);
 }
 
-ul li .descr::before {
+.experience-ul li .descr::before {
   z-index: -1;
   bottom: 0.25rem;
 }
 
 @media (min-width: 40rem) {
-  ul {
+  .experience-ul {
     grid-template-columns: 1fr var(--line-w) 1fr;
   }
-  ul::before {
+  .experience-ul::before {
     grid-column: 2;
   }
-  ul li:nth-child(odd) {
+  .experience-ul li:nth-child(odd) {
     grid-column: 1;
   }
-  ul li:nth-child(even) {
+  .experience-ul li:nth-child(even) {
     grid-column: 3;
   }
 
   /* start second card */
-  ul li:nth-child(2) {
+  .experience-ul li:nth-child(2) {
     grid-row: 2/4;
   }
 
-  ul li:nth-child(odd) .date::before {
+  .experience-ul li:nth-child(odd) .date::before {
     clip-path: polygon(0 0, 100% 0, 100% 100%);
     left: 0;
   }
 
-  ul li:nth-child(odd) .date::after {
+  .experience-ul li:nth-child(odd) .date::after {
     transform: translate(-50%, -50%);
     left: calc(100% + var(--col-gap) + var(--line-w) / 2);
   }
-  ul li:nth-child(odd) .date {
+  .experience-ul li:nth-child(odd) .date {
     border-radius: 0 calc(var(--dateH) / 2) calc(var(--dateH) / 2) 0;
   }
 }
