--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -57,6 +57,10 @@ ul.skill__list {
   font-size: 35px;
 }
 
+.row .contact-div-box{
+  background-color: #000000;
+}
+
 .col__22 {
   max-width: 66.66667%;
   display: flex;
