--- a/src/Components/Service.css
+++ b/src/Components/Service.css
@@ -23,6 +23,22 @@ h1.heading {
   z-index: 2;
 }
 
+.tool-icons{
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.small_logo{
+  max-width: 40px;
+  margin-right: 10px;
+}
+
+.big_logo{
+  max-width: 75px;
+  margin-right: 10px;
+}
+
 @keyframes down-btn {
   0% {
     bottom: 20px;
@@ -118,7 +134,7 @@ body {
 .card-category-2 ul li,
 .card-category-3 ul li {
   margin: 20px 20px;
-  background-color: rgb(201, 187, 187);
+  background-color: rgb(0, 0, 0);
   border-radius: 10px;
 }
 
