Progress on Contact me page

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,8 +1,15 @@
-.contact {
-}
-
 h1.contact__heading {
   font-size: 60px;
+}
+
+.social-media {
+  display: flex;
+  justify-content: center;
+}
+
+.social-media a img {
+  max-width: 50px;
+  margin-right: 10px;
 }
 
 p.contact__heading {
